--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/react-dom": "^16.8.2",
     "@types/styled-components": "^4.1.12",
     "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-dropzone": "^10.0.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3",
     "typescript": "^3.3.3333"
