--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^16.8.2",
     "@types/styled-components": "^4.1.12",
     "axios": "^0.18.0",
+    "cypress": "^3.1.5",
     "date-fns": "^1.30.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -21,7 +22,8 @@
     "start": "PORT=3030 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open ./test"
   },
   "eslintConfig": {
     "extends": "react-app"
